Fix - Webview not responsive

--- a/src/components/web-page/style.scss
+++ b/src/components/web-page/style.scss
@@ -4,7 +4,7 @@
   height: 100vh;
 
   webview {
-    display: flex;
+    display: inline-flex !important;
     width: 100vw;
     height: 100vh;
     overflow: scroll;
